# four

./: .gitignore  README.md  devreqs.txt  pyproject.toml  scratch.py  setup.py  tox.ini
docs/latest/: .buildinfo  genindex.html  index.html  math.html  objects.inv  package.html  py-modindex.html  search.html  searchindex.js
docs/latest/.doctrees/: environment.pickle  index.doctree  math.doctree  package.doctree
docs/latest/.doctrees/package/: four._core.doctree  four._fp_api.doctree  four._oo_api.doctree  four.chain.doctree  four.graph.doctree  four.infer.doctree
docs/latest/_modules/: index.html
docs/latest/_modules/four/: _core.html  _fp_api.html  _oo_api.html  infer.html
docs/latest/_sources/: math.rst.txt
docs/latest/_sources/package/: four._core.rst.txt  four._fp_api.rst.txt  four._oo_api.rst.txt  four.chain.rst.txt  four.graph.rst.txt  four.infer.rst.txt
docs/latest/package/: four._core.html  four._fp_api.html  four._oo_api.html  four.chain.html  four.graph.html  four.infer.html
docs/source/: 4-tree-100.gv  4-tree-50.gv  conf.py  glossary.rst  index.rst  math.rst  package.rst
docs/source/_static/: custom.css
four/: __init__.py  __main__.py  _core.py  _fp_api.py  _fp_method.py  _oo_api.py  _oo_method.py  chain.py  graph.py  infer.py
tests/: __init__.py
